# axi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  axi.json.example  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  article-intro.md  configuration.md  design.md  guide.md  open-questions.md  tech-stack.md  usage.md
skills/axi-creator/: SKILL.md
skills/axi-use/: SKILL.md
src/axi/: __init__.py  cli.py  config.py  executor.py  models.py  registry.py
src/axi/daemon/: client.py  protocol.py  server.py
src/axi/providers/: mcp.py  native.py
src/axi/search/: __init__.py  bm25.py  cache.py  embedding.py  hybrid.py  regex.py  tokenize.py
tests/: fake_ep_tools.py  fake_ep_tools_alt.py  mock_mcp_server.py  test_basic.py  test_bm25.py  test_cache.py  test_cli_utils.py  test_daemon_client.py  test_entry_points_discovery.py  test_executor.py  test_hybrid.py  test_mcp.py  test_models.py  test_registry.py
