[project]
name = "axi"
version = "0.1.0"
description = "Agent eXecution Interface - unified tool layer for AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
axi = "axi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
