[project]
name = "axi-cli"
version = "0.0.4"
description = "Agent eXecution Interface - unified tool layer for AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.3",
    "jieba>=0.42.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
axi = "axi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axi"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".python-version",
    "CLAUDE.md",
    "axi.json.example",
    "docs/",
    "tests/",
    "uv.lock",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
